# Radiom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
distribution/: bernoulli.c  normal.c  poisson.c  uniform.c
foundation/: engine.c  fifobuf.c
include/: radiom.h
include/radiom/: defines.h  engine.h  fifobuf.h  whitener.h
include/radiom/distribution/: bernoulli.h  normal.h  poisson.h  uniform.h
whitener/: ecrypt-sync.h  whitener.c
